--- a/help.html
+++ b/help.html
@@ -157,7 +157,7 @@ a {text-decoration: none; font-weight: normal; color: black;}
 
 <a href="http://portableapps.com/donate"><img src="Other/Help/images/donation_button.png" width="110" height="23" border="0" align="top" alt="Make a Donation"></a> - Support PortableApps.com's Hosting and Development
 <p><a href="App/Mumble/Readme.txt">Mumble Readme</a></p>
-<p><a href="http://PortableApps.com/node/42611">Go to the Mumble Portable Homepage &gt;&gt;</a></p>
+<p><a href="http://PortableApps.com/apps/internet/mumble-portable">Go to the Mumble Portable Homepage &gt;&gt;</a></p>
 <p><a href="http://PortableApps.com/">Get more portable apps at PortableApps.com</a></p>
 
 <p>This software is OSI Certified Open Source Software. OSI Certified is a certification mark of the Open Source Initiative.</p>
