--- a/help.html
+++ b/help.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html lang="en-US"><head><title>Mumble Portable Help</title>
-	<link rel="alternate" type="application/rss+xml" title="PortableApps.com" href="http://portableapps.com/feeds/general">
+	<link rel="alternate" type="application/rss+xml" title="PortableApps.com" href="https://portableapps.com/feeds/general">
 	<link rel="SHORTCUT ICON" href="Other/Help/images/favicon.ico">
 <style>body {
 	font-family: Verdana,Arial,Helvetica,sans-serif;
@@ -149,25 +149,25 @@ a {text-decoration: none; font-weight: normal; color: black;}
 }</style>
 </head>
 <body>
-<div class="logo"><a href="http://portableapps.com/"><img src="Other/Help/images/help_logo_top.png" width="229" height="47" alt="PortableApps.com - Your Digital Life, Anywhere"></a></div>
+<div class="logo"><a href="https://portableapps.com/"><img src="Other/Help/images/help_logo_top.png" width="229" height="47" alt="PortableApps.com - Your Digital Life, Anywhere"></a></div>
 <div class="content">
 <h1 class="hastagline">Mumble Portable Help</h1>
 <h2 class="tagline">VoIP client</h2>
-<p>Mumble Portable is the Mumble VoIP client packaged with a PortableApps.com launcher as a <a href="http://portableapps.com/about/what_is_a_portable_app">portable app</a>, so you can voice chat with groups on your iPod, USB flash drive, portable hard drive, etc.  It has all the same features as Mumble, plus, it leaves no personal information behind on the machine you run it on, so you can take it with you wherever you go.  <a href="http://mumble.info/">Learn more about Mumble...</a></p>
+<p><img src="App\AppInfo\appicon_128.png" width="128" height="128" style="float:right;">Mumble Portable is the Mumble VoIP client packaged with a PortableApps.com launcher as a <a href="https://portableapps.com/about/what_is_a_portable_app">portable app</a>, so you can voice chat with groups on your iPod, USB flash drive, portable hard drive, etc.  It has all the same features as Mumble, plus, it leaves no personal information behind on the machine you run it on, so you can take it with you wherever you go.  <a href="https://www.mumble.info/">Learn more about Mumble...</a></p>
 
-<a href="http://portableapps.com/donate"><img src="Other/Help/images/donation_button.png" width="110" height="23" border="0" align="top" alt="Make a Donation"></a> - Support PortableApps.com's Hosting and Development
+<a href="https://portableapps.com/donate"><img src="Other/Help/images/donation_button.png" width="110" height="23" border="0" align="top" alt="Make a Donation"></a> - Support PortableApps.com's Hosting and Development
 <p><a href="App/Mumble/Readme.txt">Mumble Readme</a></p>
-<p><a href="http://PortableApps.com/apps/internet/mumble-portable">Go to the Mumble Portable Homepage &gt;&gt;</a></p>
-<p><a href="http://PortableApps.com/">Get more portable apps at PortableApps.com</a></p>
+<p><a href="https://portableapps.com/apps/internet/mumble-portable">Go to the Mumble Portable Homepage &gt;&gt;</a></p>
+<p><a href="https://portableapps.com/">Get more portable apps at PortableApps.com</a></p>
 
 <p>This software is OSI Certified Open Source Software. OSI Certified is a certification mark of the Open Source Initiative.</p>
 
 <h2>Portable App Issues</h2>
 <ul>
-	<li><a href="http://portableapps.com/support/portable_app#downloading">Downloading a Portable App</a></li>
-	<li><a href="http://portableapps.com/support/portable_app#installing">Installing a Portable App</a></li>
-	<li><a href="http://portableapps.com/support/portable_app#using">Using a Portable App</a></li>
-	<li><a href="http://portableapps.com/support/portable_app#upgrading">Upgrading a Portable App</a></li>
+	<li><a href="https://portableapps.com/support/portable_app#downloading">Downloading a Portable App</a></li>
+	<li><a href="https://portableapps.com/support/portable_app#installing">Installing a Portable App</a></li>
+	<li><a href="https://portableapps.com/support/portable_app#using">Using a Portable App</a></li>
+	<li><a href="https://portableapps.com/support/portable_app#upgrading">Upgrading a Portable App</a></li>
 </ul>
 <p>You can read about advanced configuration options for the PortableApps.com Launcher in its <a href="Other\Source\Readme.txt">readme file</a>.
 
