--- a/help.html
+++ b/help.html
@@ -153,7 +153,7 @@ a {text-decoration: none; font-weight: normal; color: black;}
 <div class="content">
 <h1 class="hastagline">Mumble Portable Help</h1>
 <h2 class="tagline">VoIP client</h2>
-<p><img src="App\AppInfo\appicon_128.png" width="128" height="128" style="float:right;">Mumble Portable is the Mumble VoIP client packaged with a PortableApps.com launcher as a <a href="https://portableapps.com/about/what_is_a_portable_app">portable app</a>, so you can voice chat with groups on your iPod, USB flash drive, portable hard drive, etc.  It has all the same features as Mumble, plus, it leaves no personal information behind on the machine you run it on, so you can take it with you wherever you go.  <a href="https://www.mumble.info/">Learn more about Mumble...</a></p>
+<p><img src="App\AppInfo\appicon_128.png" width="128" height="128" style="float:right;">Mumble Portable is a VoIP client. It's packaged with a PortableApps.com launcher as a <a href="https://portableapps.com/about/what_is_a_portable_app">portable app</a>, so you can use it from a cloud folder, portable drive, or local folder without needing to install it on each PC. <a href="https://www.mumble.info/">Learn more about Mumble...</a></p>
 
 <a href="https://portableapps.com/donate"><img src="Other/Help/images/donation_button.png" width="110" height="23" border="0" align="top" alt="Make a Donation"></a> - Support PortableApps.com's Hosting and Development
 <p><a href="App/Mumble/Readme.txt">Mumble Readme</a></p>
